--- a/02_production.ipynb
+++ b/02_production.ipynb
@@ -9,8 +9,7 @@
     "#hide\n",
     "#! [ -e /content ] && pip install -Uqq fastbook\n",
     "import fastbook\n",
-    "fastbook.setup_book()\n",
-    "# Test comment"
+    "fastbook.setup_book()"
    ]
   },
   {
